--- a/.github/workflows/mypipeline1.yml
+++ b/.github/workflows/mypipeline1.yml
@@ -2,7 +2,7 @@
 # This is a basic workflow to help you get started with Actions
 #--------------------------------------------------------------
 
-name: GitHub Actions - Basics
+name: GitHub-Actions-Basics
 
 on:
   push:
